# nova-fund

./: .gitignore  README.md  nova_fund_contract.wasm  package-lock.json  package.json
.github/: copilot-instructions.md
contracts/nova_fund_contract/: Cargo.toml
contracts/nova_fund_contract/src/: lib.rs
src/: constants.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CallToAction.tsx  FeaturedProjects.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  ProjectGrid.tsx  Stats.tsx
src/context/: WalletContext.tsx
src/lib/: contract.ts
