[package]
name = "nova_fund_contract" # Dosya adı bu isme göre oluşur (nova_fund_contract.wasm)
version = "0.1.0"
edition = "2021"

# --- BU KISIM ÇOK KRİTİK, EKSİKSE WASM OLUŞMAZ ---
[lib]
crate-type = ["cdylib"]
# -------------------------------------------------

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"