[package]
name = "nova_fund_contract"
version = "0.1.0"
edition = "2021"

# WASM çıktısı için gerekli — cdylib olarak derleme
[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

# Küçük ve optimize WASM üretimi için
[profile.release]
opt-level = "z"            # Boyut optimizasyonu
overflow-checks = true     # Soroban gereksinimi: sessiz taşmayı önle
lto = true                 # Link-time optimizasyonu
codegen-units = 1          # Tek birimde derleme
panic = "abort"            # Panic'te abort